--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,2 @@
-./cloud/Container_operationSystem.markdown
-./cloud/pictures/cgroup.png
+cloud/Container_operationSystem.markdown
+cloud/pictures/cgroup.png
