--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 cloud/Container_operationSystem.markdown
 cloud/pictures/cgroup.png
 Smart_Contract/Storage/artifacts/*
+language/javascript/react/.idea/*
